# api.yaml
@@ -184,7 +184,7 @@ paths:
         500:
           description: Server Error
 
-  /api/category/getCategory/categorySlug:
+  /api/category/getCategory/:categorySlug:
     get:
       summary: Get category
       description: Get category
@@ -193,3 +193,34 @@ paths:
           description: Success
         500:
           description: Server Error
+
+  /api/song/getAllSongs:
+    get:
+      summary: Get all songs
+      description: Get all songs
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server Error
+
+  /api/song/getASongs/:id:
+    get:
+      summary: Get a song requires trackId as parameter
+      description:  Get a song requires trackId as parameter
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server Error
+
+  /api/song/getSongByCategory/:category:
+    get:
+      summary: Get all songs by category name
+      description:  Get all songs by category name
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server Error
+
